--- a/relatorio/contracapa.tex
+++ b/relatorio/contracapa.tex
@@ -1,18 +1,18 @@
 % Folha de rosto sem o uso de \folhaderosto
 \begin{titlepage}
     \begin{center}
-        {\large UNIVERSIDADE DE BRASÍLIA} \\
-        {\large DEPARTAMENTO DE GEOGRAFIA} \\[3.3cm]
+        {\large \textbf{UNIVERSIDADE DE BRASÍLIA}} \\
+        {\large \textbf{DEPARTAMENTO DE GEOGRAFIA}} \\[3.3cm]
         {\large Nelson Dos Santos Luz} \\[3.3cm]
-        {\Huge Analise Temporal da Região da Cidade de Manaus/AM.} \\[3.6cm]
+        {\Huge RELATÓRIO DE ESTÁGIO.} \\[3.6cm]
         \hspace{.45\textwidth} % posicionando a minipage
         \begin{minipage}{.5\textwidth}
             %\begin{espacosimples}
-                Trabalho final da disciplina de Fotointerpletação Aplicada ao Planejamento Urbano, Ministrada pelo Prof. Doutor .
+                Trabalho final da disciplina de Estágio Supervisionado em Geografia 02, Ministrada pelo Prof. Doutor Fernando Sobrinho.
             %\end{espacosimples}
         \end{minipage}\\[3.3cm]
         \vfill
         {\large BRASÍLIA} \\
-        {\large 2015}
+        {\large 2016}
     \end{center}
 \end{titlepage}
