--- a/relatorio/Cap02.tex
+++ b/relatorio/Cap02.tex
@@ -1,6 +1,195 @@
 \hspace{1.5cm}
-\subsection*{Parâmetros Curriculares Nacionais}
+\textbf{Parâmetros Curriculares Nacionais - PCNs}
 
-\subsection*{Projeto político pedagógico}
+Segundos os Parâmetros Curriculares Nacionais (PCNs) designam como objetivos do ensino fundamental que os alunos sejam capazes de: 
 
-\subsection*{Ensino e prática de Geografia}
+\begin{itemize}
+\item compreender a cidadania como participação social e política, assim como exercício de direitos e deveres políticos, civis e sociais, adotando, no dia-a-dia, atitudes de solidariedade, cooperação e repúdio às injustiças, respeitando o outro e exigindo para si o mesmo respeito; 
+
+\item posicionar-se de maneira crítica, responsável e construtiva nas diferentes situações sociais, utilizando o diálogo como forma de mediar conflitos e de tomar decisões coletivas; 
+
+\item conhecer características fundamentais do Brasil nas dimensões sociais, materiais e culturais como meio para construir progressivamente a noção de identidade nacional e pessoal e o sentimento de pertinência ao país; 
+
+\item conhecer e valorizar a pluralidade do patrimônio sociocultural brasileiro, bem como aspectos socioculturais de outros povos e nações, posicionando-se contra qualquer discriminação baseada em diferenças culturais, de classe social, de crenças, de sexo,de etnia ou outras características individuais e sociais;  
+\item perceber-se integrante, dependente e agente transformador do ambiente, identificando seus elementos e as interações entre eles, contribuindo ativamente para a melhoria do meio ambiente;
+\item desenvolver o conhecimento ajustado de si mesmo e o sentimento de confiança em suas capacidades afetiva, física, cognitiva, ética, estética, de inter-relação pessoal e de inserção social, para agir com perseverança na busca de conhecimento e no exercício da cidadania;
+\item conhecer o próprio corpo e dele cuidar, valorizando e adotando hábitos saudáveis como um dos aspectos básicos da qualidade de vida e agindo com responsabilidade em relação à sua saúde e à saúde coletiva;
+\item utilizar as diferentes linguagens  verbal, musical, matemática, gráfica, plástica e corporal  como meio para produzir, expressar e comunicar suas idéias, interpretar e usufruir das produções culturais, em contextos públicos e privados, atendendo a diferentes intenções e situações de comunicação;
+\item saber utilizar diferentes fontes de informação e recursos tecnológicos para adquirir e construir conhecimentos;
+\item questionar a realidade formulando-se problemas e tratando de resolvê-los, utilizando para isso o pensamento lógico, a criatividade, a intuição, a capacidade de análise crítica, selecionando procedimentos e verificando sua adequação.
+\end{itemize}
+
+Para o PCN a Geografia é uma área que oferece instrumentos essenciais para a compreensão e intervenção na realidade social. Neste sentido  é proposto um trabalho pedagógico com vista o aumento das capacidades dos discentes, do ensino fundamental, de observar, conhecer, explicar, comparar e representar as características do lugar em que vivem e de diferente paisagens e espaços geográficos. O PCN traz uma contextualização sobre a trajetória da Geografia, em torno do seu objeto e método como ciência e disciplina escolar, com focus nos objetivos, conceitos básicos, os procedimentos, as atitudes e os critérios de avaliação a serem ensinados mostrando suas tendências atuais e importância na constituição do cidadão.\\
+
+As faltas de ações concretas fazem com que o professor, em sala de aula,  ensine uma geografia descritiva, apoiada nos livro didáticos. Isto é provocado pela falta de definição na escolha dos conteúdos a serem ministrados. Provocando em geral:
+
+\begin{itemize}
+\item abandono de conteúdos fundamentais da Geografia, tais como as categorias de nação, território, lugar, paisagem e região, bem como do estudo de sua natureza;
+\item são comuns modismos que buscam sensibilizar os alunos para temáticas mais atuais, sem a preocupação real de promover uma compreensão dos múltiplos fatores que delas são causas 
+ou decorrências, o que provoca um envelhecimento rápido dos conteúdos. Um exemplo é a adaptação forçada das questões ambientais em currículos e livros didáticos que ainda preservam o discurso da Geografia Tradicional e não têm como objetivo a compreensão processual e crítica dessas questões, vindo a se transformar na aprendizagem de slogans;
+\item  há uma preocupação maior com conteúdos conceituais do que com os procedimentais e atitudinais. O objetivo do ensino fica restrito, assim, à aprendizagem de fenômenos e conceitos, desconsiderando a aprendizagem de procedimentos e atitudes fundamentais para a compreensão dos métodos e explicações com os quais a própria Geografia trabalha;
+\item  as propostas pedagógicas separam a Geografia Humana da Geografia da Natureza em relação àquilo que deve ser apreendido como conteúdo específico: ou a abordagem é essencialmente social (e a natureza é um apêndice, um recurso natural), ou então se trabalha a gênese dos fenômenos naturais de forma pura, analisando suas leis, em detrimento da possibilidade exclusiva da Geografia de interpretar, compreender e inserir o juízo do aluno na aprendizagem dos fenômenos em uma abordagem socioambiental;
+\item  a memorização tem sido o exercício fundamental praticado no ensino de Geografia, mesmo nas abordagens mais avançadas.  Apesar da proposta de problematização, de estudo do meio e da forte ênfase que se dá ao papel dos sujeitos sociais na construção do território e do espaço, o que se avalia ao final de cada estudo é se o aluno memorizou ou não os fenômenos e conceitos trabalhados e não aquilo que pôde identificar e compreender das múltiplas relações aí existentes;
+\item  a noção de escala espaço-temporal muitas vezes não é clara, ou seja, não se explicita como os temas de âmbito local estão presentes naqueles de âmbito universal, e vice-versa, e como o espaço geográfico materializa diferentes tempos (da sociedade e da natureza) ou Geografia como história do presente;
+\item o ensino de Geografia pode levar os alunos a compreender de forma mais ampla a realidade, possibilitando que nela interfiram de maneira mais consciente e propositiva. Para tanto, porém, é preciso que eles adquiram conhecimentos, dominem categorias, conceitos e procedimentos básicos com os quais este campo do conhecimento opera e constitui suas teorias e explicações, de modo que possam não apenas compreender as relações socioculturais e o funcionamento da natureza às quais historicamente pertence, mas também conhecer e saber utilizar uma forma singular de pensar sobre a realidade: o conhecimento geográfico. 
+\end{itemize}
+
+Como objetivos de organizar os conteúdos em eixos temáticos, partindo da problemática da geografia. Neste contexto cada tema sugerem itens, que não são fechados, onde cabe ao professor selecionar e criar outros dentro da sua realidade local, com conteúdos pertinentes à sua região.
+No terceiro ciclo são propostos estes eixos temáticos:
+
+\begin{itemize}
+\item A Geografia como uma possibilidade de leitura e compreensão do mundo.
+\item O estudo da natureza e sua importância para o homem.
+\item O campo e a cidade como formações socioespaciais.
+\item A cartografia como instrumento na aproximação dos lugares e do mundo.
+\end{itemize}
+\hspace{1.5cm}
+Já no quarto ciclo são propostos os seguintes temas temáticos:
+\begin{itemize}
+\item A Geografia como uma possibilidade de leitura e compreensão do mundo.
+\item O estudo da natureza e sua importância para o homem.
+\item O campo e a cidade como formações socioespaciais.
+\item A cartografia como instrumento na aproximação dos lugares e do mundo.
+\end{itemize}
+
+\textbf{Projeto político pedagógico}\\
+
+O Projeto político pedagógico (PPP) do Centro de ensino fundamental nº 07 de Brasília, tem como objetivo geral Promover o desenvolvimento intelectual, social e cultural, tencionando a efetiva participação de todos os segmentos, em especial o aluno, no ambiente social onde está inserido. Os educadores, em parceria com as famílias, precisam enraizar na formação, dos estudantes, valores e princípios éticos. Já seus objetivos específicos, são os seguintes:
+
+\begin{itemize}
+\item Disponibilizar o conhecimento sistematicamente organizado;
+\item Desenvolver hábitos de estudo;
+\item Promover pesquisas escolares em diversas áreas do conhecimento, procurando desenvolver as competências e habilidades previstas;
+\item Inserir os alunos em eventos socioculturais extraclasses;
+\item Promover oficinas lúdicas que desenvolvam e estimulem o raciocínio lógico;
+\item Promover a inclusão digital dos alunos, por intermédio do uso contínuo do laboratório de informática;
+\item Realizar gincanas e campeonatos visando à socialização;
+\item Promover oficinas de preservação ambiental, valorização da vida e cidadania;
+\item Envolver a família e as instituições para uma participação responsável no processo de ensino aprendizagem;
+\item Estimular o cumprimento das normas disciplinares promovendo assim uma boa socialização e consciência cidadã;
+\item Conscientizar para a importância da participação na APAM (Associação de Pais Alunos e Mestres);
+\item Desenvolver ações que garantam a segurança dos alunos no interior e nas proximidades da escola;
+\item Promover visitas culturais e recreativas no decorrer do ano letivo;
+\item Implementar o projeto interdisciplinar, artístico, científico e cultural no decorrer do ano letivo com culminância em Mostra de Trabalhos ou Feira Científico-cultural;
+\item Implementar avaliações bimestrais interdisciplinares, divididas por áreas do conhecimento (Linguagens, códigos e suas tecnologias; Ciências da Natureza e suas tecnologias; Matemática e suas tecnologias; Ciências Humanas e suas tecnologias.). 
+\item Promover oficinas nas diversas áreas do conhecimento proporcionando maior interação família-escola e criação de hábitos de estudo;
+\item Realizar palestras enfocando temas atuais voltados às necessidades e interesses dos alunos e dos pais/responsáveis;
+\item Criar e consolidar o Grêmio Estudantil;
+\item Promover ações para a manutenção das quadras poliesportivas;
+\item Buscar permanentemente parcerias com instituições;
+\end{itemize}
+
+Na questão do Desenvolvimento e aprendizagem, O PPP/CEF 07 BSB mostra que a educação deve priorizar ações, com inicio no lar e avançar com a ajuda da escola, com vista ao desenvolvimento humano. A comunidade escolar (gestores, professores, país e etc.) devem possibilitar ao aluno as condições necessárias para superar seus desafios das transformações da sociedade, com constantes inovações dos sistemas educativos. Não descartando o conhecimento empirista que o aluno carrega consigo, sob o mundo. O desenvolvimento é construido de forma contínua em uma interação dialética com o ambiente. A escola deve está voltada para a construção de uma cidadania crítica, reflexiva, criativa e ativa de forma a consolidar nos alunos suas bases culturais para, assim, posicionar-se perante as transformações na vida produtiva e sociopolítica. Dentro da Organização da Proposta Curricular o conteúdo programático de geografia está assim elaborado:\\
+
+\textbf{6º Ano:}
+\begin{itemize}
+\item 1º Bimestre
+\begin{itemize}
+\item Geografia como Ciência: Importância; O lugar, as paisagens e o espaço geográfico;
+\item A Terra e o Universo;
+\item Orientação e localização;
+\item Sistema Solar;
+\item A idade da Terra;
+\item Visita ao Planetário;
+\item Capítulos 1,5 e 7
+\end{itemize}
+\end{itemize}
+\begin{itemize}
+\item 2º Bimestre
+\begin{itemize}
+\item Movimentos da Terra e suas consequências; Cartografia: noções de escala e mapas. 
+\item Fusos horários;
+\item Trabalho escolar: Países na Copa Mundial;
+\item Capítulos 4, 6 e 7
+\end{itemize}
+\end{itemize}
+\begin{itemize}
+\item 3º Bimestre
+\begin{itemize}
+\item Relação dos homens; Natureza; 
+\item Sociedade; Setores da economia;
+\item Preservação do meio ambiente;
+\item Trabalho escolar: TRE;
+\item Capítulos 2,3 e 16
+\item Distrito Federal e Entorno.
+\item RAS – origem dos alunos.
+\item Formas de relevo terrestre:
+\begin{itemize}
+\item Litosfera
+\item Hidrosfera
+\item Atmosfera
+\end{itemize}
+\end{itemize}
+\end{itemize}
+\begin{itemize}
+\item 4º Bimestre
+\begin{itemize}
+\item Estrutura e dinâmica da Terra; Tipos de clima no Planeta Terra;
+\item Formação vegetal na superfície terrestre;
+\item Consciência Negra;
+\item Capítulos 9, 10 e (11 trabalho)
+\end{itemize}
+\end{itemize}
+\textbf{7º Ano:}
+\begin{itemize}
+\item 1º Bimestre
+\begin{itemize}
+\item Cartografia;
+\item Posição do Brasil no Mundo; 
+\item Comparação territorial com outros países;
+\item Divisão Regional;
+\item Formação histórico-cultural do território brasileiro.
+\end{itemize}
+\end{itemize}
+\begin{itemize}
+\item 2º Bimestre
+\begin{itemize}
+\item O processo de industrialização e modernização dos meios de produção e as desigualdades sociais; 
+\item Fatores de crescimento e distribuição da população brasileira; 
+\item Consequências do processo de industrialização brasileira; 
+\item Migração da população interna e externa.
+\end{itemize}
+\end{itemize}
+\begin{itemize}
+\item 3º Bimestre
+\begin{itemize}
+\item Características físicas e socioeconômicas culturais das regiões brasileiras;
+\item Setores da economia do Brasil; 
+\item Urbanização brasileira e suas conseqüências.
+\end{itemize}
+\end{itemize}
+\begin{itemize}
+\item 4º Bimestre
+\begin{itemize}
+\item Meios de transporte e comunicação no Brasil; 
+\item Influências sociais; 
+\item Análise do desenvolvimento socioeconômico brasileiro.
+\end{itemize}
+\end{itemize}
+
+\textbf{Ensino e prática de Geografia}\\
+
+Durante a disciplina Estágio Supervisionado 02 de Geografia, alguns artigo foram utilizados como aporte teórico metodológico do ensino e prática, da matéria, em sala de aula. O objetivo deste texto é realizar uma revisão, dos principais pontos, das pesquisas decorridas durante o semestre.\\
+
+De acordo com \cite{de2002psicologia}, o estudo do desenvolvimento infantil é, até hoje, os eixos dos debates pelos autores que dispensaram  seus conhecimentos à Psicologia e à Educação no início do século XX. Ao longo do tempo novas configurações os trabalhos nas sociedades industrializadas levou a destituir o trabalho infantil e a inclusão de uma grande massa de crianças para as escolas. A escola é dado o papel fundamental de escolher as experiências úteis realizadas pela humanidade para sistematizar as  questões cognitivas necessárias a uma sociedade democrática, com um desenvolvimento do pensamento reflexivo.\\
+
+Para \cite{castellar2005educaccao}, no seu artigo que trata a aprendizagem e a didática no âmbito da geografia escolar, é necessário realizar uma investigação como aplicar o saber-fazer em geografia, nas aplicações dos saberes geográficos dentro das atividades escolares. Nesta ideia o ensino da geografia na educação básica, deve ser entendida como um processo de concepção de construção da espacialidade, associada aos seguintes objetivos, que podem criar novas possibilidades no currículo da geografia escolar, associados com métodos de análise do saber geográfico:\\
+
+\begin{itemize}
+\item Capacitar para a aplicação dos saberes geográficos nos trabalhos relativos a  outras competências e capacitar para a utilização de mapas e métodos de trabalho de campo;
+\item Aumentar o conhecimento e a compreensão  dos espaços nos contextos locais, regionais, nacionais, internacionais e mundiais em particular:
+\begin{itemize}
+\item conhecimento do espaço territorial;
+\item compreensão dos traços característicos que dão a um lugar a sua identidade;
+\item compreensão das semelhanças e diferenças entre os lugares;
+\item compreensão das relações entre diferentes temas e problemas de localizações particulares;
+\item compreensão dos domínios que caracterizam o meio físico e a maneira como os lugares foram sendo organizados socialmente; e
+\item compreensão da utilização e do mau uso dos recursos naturais.
+\end{itemize}
+\end{itemize}
+
+Segundo a autora, O aluno ao ir a escola aprende a ler, contar e escrever, mas pouco lhe é ensinado a ler o mundo. É neste sentido que entra a geografia, que prepara o aluno a ler informações do espaço vivido em uma leitura dos elementos naturais e construídos presentes na paisagem na sua forma e significado.\\
+
+Neste contexto temos a Cartografia, que para \cite{lima2012linguagem} contribui para um melhor entendimento dos conteúdos geográficos através das representações espaciais da terra. Devido a este fato a cartografia é de fundamental importância no processo de ensino-aprendizagem da geografia escolar. A linguagem cartográfica e a sociedade estão ligadas de modo inseparável. Ela é expressa pelos plantas, cartas mapas, globos, fotografias, imagens de satélites, gráficos, perfis topográficos, maquetes, coquis, textos e outros meios. Seus surgimento se dar com os registros de pontos de referências da paisagem, utilizados para as pessoas movimentarem no espaço terrestre a sua volta. É um importante dispositivo metodológico, para que o aluno possa analisar o espaço em que vive e, assim, entender dinâmica do seu dia-a-dia.\\
+
+Durante a disciplina, Estágio de Geografia, realizamos a discussão das metodologia do ensino de geografia, na sala de aula, apoiado em 12 (doze) artigos. Aqui trouxemos algumas partes de 03 (três), que ajudam a entender o papel da geografia na formação do estudante. Buscamos, assim, um compreensão dos objetivos do PCN e PPP.
