--- a/relatorio/Cap03.tex
+++ b/relatorio/Cap03.tex
@@ -1,13 +1,13 @@
 \hspace{1.5cm}
-\subsection*{Estrutura curricular}
+\subsection{Estrutura curricular}
 
-\subsection*{Plano de Unidade}
+\subsection{Plano de Unidade}
 
-\subsection*{Plano de Ensino}
+\subsection{Plano de Ensino}
 
-\subsection*{Introdução, desenvolvimento e conclusão}
+\subsection{Introdução, desenvolvimento e conclusão}
 
-\subsection*{Recursos e técnicas utilizadas}
+\subsection{Recursos e técnicas utilizadas}
 
-\subsection*{Material didático complementar: textos, artigos, jornais}
+\subsection{Material didático complementar: textos, artigos, jornais}
 
