--- a/relatorio/Cap04.tex
+++ b/relatorio/Cap04.tex
@@ -1,8 +1,8 @@
 \hspace{1.5cm}
-\subsection*{Conhecimento da realidade escolar}
+\subsection{Conhecimento da realidade escolar}
 
-\subsection*{Planejamento da prática}
+\subsection{Planejamento da prática}
 
-\subsection*{Facilidades, possibilidades e dificuldades do ambiente escolar}
+\subsection{Facilidades, possibilidades e dificuldades do ambiente escolar}
 
-\subsection*{Avaliação da prática}
+\subsection{Avaliação da prática}
