--- a/relatorio/capaestagio.tex
+++ b/relatorio/capaestagio.tex
@@ -10,7 +10,7 @@
 {\large \textbf{Departamento de Geografia - GEA}}\\[4.1cm]
 %{\bf RESENHA}\\
 %{\bf Controle 6}\\
-{\bf \huge  RELATÓRIO DE ESTÁGIO.}\\[4.1cm]
+{\bf \huge  RELATÓRIO DO ESTÁGIO SUPERVISIONADO 02 DE GEOGRAFIA.}\\[4.1cm]
 \end{center}
 {\large Aluno: Nelson dos Santos Luz - 10/0060323}\\[0.7cm]
 {\large Professor Dr. Fernando Sobrinho }\\[4.1cm]
