--- a/relatorio/contracapa.tex
+++ b/relatorio/contracapa.tex
@@ -4,7 +4,7 @@
         {\large \textbf{UNIVERSIDADE DE BRASÍLIA}} \\
         {\large \textbf{DEPARTAMENTO DE GEOGRAFIA}} \\[3.3cm]
         {\large Nelson Dos Santos Luz} \\[3.3cm]
-        {\Huge RELATÓRIO DE ESTÁGIO.} \\[3.6cm]
+        {\Huge RELATÓRIO DO ESTÁGIO SUPERVISIONADO 02 DE GEOGRAFIA.} \\[3.6cm]
         \hspace{.45\textwidth} % posicionando a minipage
         \begin{minipage}{.5\textwidth}
             %\begin{espacosimples}
