--- a/relatorio/folhaderosto.tex
+++ b/relatorio/folhaderosto.tex
@@ -4,16 +4,12 @@
 
     {\large NELSON DOS SANTOS LUZ\\}
     \vspace{2cm}
-    {\Large \textsc{RELATÓRIO DE ESTÁGIO.}\\}
+    {\Large \textsc{RELATÓRIO DO ESTÁGIO SUPERVISIONADO 02 DE GEOGRAFIA.}\\}
     \vspace{1cm}
     \hspace{.45\linewidth}
     \begin{minipage}{.50\linewidth}
 
-            Trabalho final da disciplina de Estágio Supervisionado em Geografia 02. 
-
-            \vspace{0.5 cm}
-
-            Área de pesquisa: Centro de Ensino Fundamental nº 07 de Brasília
+            Trabalho final de estágio de docência apresentado à disciplina Estágio Supervisionado em Geografia 02, tendo como área de pesquisa: Centro de Ensino Fundamental nº 07 de Brasília. 
 
             \vspace{0.5 cm}
 
