--- a/relatorio/Cap02.tex
+++ b/relatorio/Cap02.tex
@@ -79,7 +79,7 @@ O Projeto político pedagógico (PPP) do Centro de ensino fundamental nº 07 de 
 \item Buscar permanentemente parcerias com instituições;
 \end{itemize}
 
-Na questão do Desenvolvimento e aprendizagem, O PPP/CEF 07 BSB mostra que a educação deve priorizar ações, com inicio no lar e avançar com a ajuda da escola, com vista ao desenvolvimento humano. A comunidade escolar (gestores, professores, país e etc.) devem possibilitar ao aluno as condições necessárias para superar seus desafios das transformações da sociedade, com constantes inovações dos sistemas educativos. Não descartando o conhecimento empirista que o aluno carrega consigo, sob o mundo. O desenvolvimento é construido de forma contínua em uma interação dialética com o ambiente. A escola deve está voltada para a construção de uma cidadania crítica, reflexiva, criativa e ativa de forma a consolidar nos alunos suas bases culturais para, assim, posicionar-se perante as transformações na vida produtiva e sociopolítica. Dentro da Organização da Proposta Curricular o conteúdo programático de geografia está assim elaborado:\\
+\indent Na questão do Desenvolvimento e aprendizagem, O PPP/CEF 07 BSB mostra que a educação deve priorizar ações, com inicio no lar e avançar com a ajuda da escola, com vista ao desenvolvimento humano. A comunidade escolar (gestores, professores, país e etc.) devem possibilitar ao aluno as condições necessárias para superar seus desafios das transformações da sociedade, com constantes inovações dos sistemas educativos. Não descartando o conhecimento empirista que o aluno carrega consigo, sob o mundo. O desenvolvimento é construido de forma contínua em uma interação dialética com o ambiente. A escola deve está voltada para a construção de uma cidadania crítica, reflexiva, criativa e ativa de forma a consolidar nos alunos suas bases culturais para, assim, posicionar-se perante as transformações na vida produtiva e sociopolítica. Dentro da Organização da Proposta Curricular o conteúdo programático de geografia está assim elaborado:\\
 
 \textbf{6º Ano:}
 \begin{itemize}
